--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>  
     <h1>titulo</h1>
+    <link rel="stylesheet" href="./formVendaInternet.html">
+    <link rel="stylesheet" href="./petersonWiggers.html">
 </body>
 
 </html>
